Added Ingredients and Instructions to buttermilkchickentender.html

--- a/recipes/buttermilkchickentender.html
+++ b/recipes/buttermilkchickentender.html
@@ -27,21 +27,47 @@
             <h2>Ingredients</h2>
             <h4>Marinade</h4>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>2 pounds chicken tenderloins</li>
+                <li>1 cup buttermilk</li>
+                <li>1 1/2 teaspoons salt</li>
+                <li>1/4 teaspoon cayenne pepper</li>
+                <li>1/4 teaspoon garlic powder</li>
+                <li>1/4 teaspoon paprika</li>
             </ul>
             <h4>Breading</h4>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>1 1/2 cup AP flour</li>
+                <li>1 1/2 teaspoons baking powder</li>
+                <li>1 heaping teaspoon salt</li>
+                <li>3/4 teaspoon black pepper</li>
+                <li>3/4 teaspoon garlic powder</li>
+                <li>3/4 teaspoon paprika</li>
+                <li>3 tablespoons buttermilk</li>
             </ul>
+            <h2>Instructions</h2>
+            <ol>
+                <li>
+                    In a large sealable bag, combine the chicken tenders with the marinade. Seal the bag tightly.
+                    Massage the chicken.
+                </li>
+                <li>
+                    Refrigerate for at least 4 hours or up to 24 hours.
+
+                </li>
+                <li>In a large bowl combine flour, baking powder, salt, pepper, garlic powder, and paprika.</li>
+                <li>Whisk until well blended</li>
+                <li>Add buttermilk and stir with fork until the mixture is evenly clumpy.</li>
+                <li>Line a baking sheet with aluminium foil.</li>
+                <li>Remove the chicken tenders from the marinade and toss in the breading mixture.</li>
+                <li>Set breaded tenders on the baking sheet.</li>
+                <li>Add 3 to 4 cups of vegetable oil to a large, high-sided pot.</li>
+                <li>Heat over medium to high heat (around 350 degrees Faherenheit)</li>
+                <li>Using tongs, place chicken tenders in the hot oil without crowded the pan.</li>
+                <li>Cook until golden brown, around 3 minutes on each side.</li>
+                <li>Serve and enjoy.</li>
+            </ol>
         </div>
+
     </div>
 </body>
 </html>
