Changed heading in buttermilkchickentender.html from 'Instructions' to 'Steps'

--- a/recipes/buttermilkchickentender.html
+++ b/recipes/buttermilkchickentender.html
@@ -44,7 +44,7 @@
                 <li>3/4 teaspoon paprika</li>
                 <li>3 tablespoons buttermilk</li>
             </ul>
-            <h2>Instructions</h2>
+            <h2>Steps</h2>
             <ol>
                 <li>
                     In a large sealable bag, combine the chicken tenders with the marinade. Seal the bag tightly.
