Added home link to buttermilkchickentender.html, steak.html, and stirfry.html

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -10,7 +10,7 @@
     <div class="recipe-wrapper">
         <div class="intro">
             <h1>Steak Recipe</h1>
-            <img src="https://i.giphy.com/media/gw3NpMPvrN64YrC0/giphy.webp" alt="fried chicken gif">
+            <img src="https://i.giphy.com/media/gw3NpMPvrN64YrC0/giphy.webp" alt="steak gif">
             <div class="description">
                 <h2>Description</h2>
                 <p>
@@ -62,5 +62,6 @@
         </div>
 
     </div>
+    <h3><a href="../index.html">Home</a></h3>
 </body>
 </html>
