--- a/recipes/stirfry.html
+++ b/recipes/stirfry.html
@@ -69,8 +69,10 @@
                 </li>
                 <li>Enjoy.</li>
             </ol>
+           
         </div>
 
     </div>
+    <h3><a href="../index.html">Home</a></h3>
 </body>
 </html>
