Added links to each recipe in the recipe directory

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/friedchicken.html">Fried Chicken</a></p>
+    <p><a href="recipes/buttermilkchickentender.html">Fried Chicken</a></p>
+    <p><a href="recipes/steak.html">Steak</a></p>
+    <p><a href="recipes/stirfry.html">Stir Fry</a></p>
 </body>
 </html>
