--- a/recipes/buttermilkchickentender.html
+++ b/recipes/buttermilkchickentender.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fried Chicken</title>
 </head>
-<body>
+<body id='chicken'>
     <div class="recipe-wrapper">
         <div class="intro">
             <h1>Buttermilk Chicken Tender Recipe</h1>
@@ -67,8 +71,8 @@
                 <li>Serve and enjoy.</li>
             </ol>
         </div>
-
+        <h3><a href="../index.html">Home</a></h3>
     </div>
-    <h3><a href="../index.html">Home</a></h3>
+
 </body>
 </html>
