Styled index.html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,41 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <title>Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="recipes/buttermilkchickentender.html">Fried Chicken</a></p>
-    <p><a href="recipes/steak.html">Steak</a></p>
-    <p><a href="recipes/stirfry.html">Stir Fry</a></p>
+    <div class='index'>
+        <div class="header">
+            <div class="header-text">
+                <h1>Odin Recipes</h1>
+            </div>
+        </div>
+        <div class="links">
+            <a href="recipes/buttermilkchickentender.html">
+                <div class='recipe'>
+                    <img src="https://c.tenor.com/ovcgHfY5OxkAAAAC/kfc-fried-chicken.gif" alt="fried chicken gif">
+                    <p>Fried Chicken</p>
+                </div>
+            </a>
+            <a href="recipes/steak.html">
+                <div class='recipe'>
+                    <img src="https://i.giphy.com/media/gw3NpMPvrN64YrC0/giphy.webp" alt="steak gif">
+                    <p>Steak</p>
+                </div>
+            </a>
+            <a href="recipes/stirfry.html">
+                <div class='recipe'>
+                    <img src="https://media0.giphy.com/media/26FfdYXAl5NT9eN9e/giphy.gif?cid=790b761186289936d932bcb3df8666044b6dcd02164b24be&rid=giphy.gif&ct=g" alt="stir fry gif">
+                    <p>Stir Fry</p>
+                </div>
+                </a>
+        </div>
+    </div>
+    
 </body>
 </html>
